[project]
name = "heroui-provider"
version = "0.1.0"
description = "Hero UI Provider For Reflex Web Framework."
readme = "README.md"
authors = [
    { name = "Adarsh Gourab Mahalik", email = "gourabmahalikadarsh@gmail.com" },
]
requires-python = ">=3.13"
dependencies = ["reflex>=0.7.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider", "src/avatar", "src/alert", "src/textarea", "src/card", "src/input", "src/checkbox", "src/radio", "src/button"]
